2013-11-25
* add missing indexes to database
* split EXPORT_SYMBOL and EXPORT_SYMBOL_GPL

2013-11-19
* fix for ELF extraction in ranking.py. Needs more work.

2013-11-06
* fix error in storing paths in extractkernelconfig.py
* add new script to derive a kernel configuration from BAT result and database
with kernel configuration directives

2013-11-04
* remove templink hacks from PDF, ISO and TAR unpacking, which could possibly
lead to race conditions and did not work if temporary unpack dir and file to
be linked were on different partition.
* fix blacklisting size bug in ISO unpacking
* start on creating prettier variable names reporting, including versions for
unique hits
* fix edge case tagging for Java class files (multiple valid class file
headers)
* create more piecharts for visualizing how many hits were unique, assigned,
or unmatched
* fix labels for version charts

2013-11-03
* extract more information from Linux kernel source code files
* start on extracting copyright information in licenseversion.py

2013-11-02
* fix symlinking in findlibs.py, also generate graphs for end points of the
graph
* update batchextractprogramstrings.py for FOSSology 2.3.0
* extract more information from Linux kernel source code files

2013-10-10
* tagging and releasing 15.0

2013-10-09
* disable 'findlibs' by default because Debian (and Ubuntu) ship an old broken
version of pydot
* remove pychart as a dependency, no longer needed with switch to reportlab
* remove bat-generate-chart.py from bat-extratools
* update configurations for Fedora and Ubuntu packages
* fix font path for Ubuntu, but it is a crude fix that is not very portable to
other distributions

2013-10-08
* remove unused code from ranking.py
* update default configuration with configuration settings from actual scan
machine
* update manual for BAT 15
* generatereports.py: cache squashing of versions where possible
* several list -> set conversions in various files

2013-10-07