@@ -46,7 +46,8 @@ fsmagic = {
             #'lzma_alone':       '\x5d\x00\x00\x80',
             'jffs2_le':         '\x85\x19',
             'jffs2_be':         '\x19\x85',
-            'ubifs':            '\x55\x42\x49\x23',
+            'ubifs':            '\x31\x18\x10\x06',
+            'ubi':              '\x55\x42\x49\x23',
             'rpm':              '\xed\xab\xee\xdb',
             'ext2':             '\x53\xef',        # little endian
             'minix':            '\x8f\x13',        # specific version of Minix v1 file system
